tdf#95374 DOCX import: reset left indentation at disabled numbering

Paragraphs with disabled numbering using non-existent numId=0
haven't got inherited left indentation in MSO. Keeping them resulted
unnecessary indentation, moreover, missing (non-visible) text
in narrow table cells.

Change-Id: I46003031d36f578b0b260dea74d7d45e75905261